<resources>
    <string name="app_name">语音助手</string>

    <string name="accounts">Accounts</string>
    <string name="icon_desc">Application icon</string>
    <string name="title_separator_desc">Title separator</string>
    <string name="refresh">Refresh</string>
    <string name="error">Error</string>
    <string name="error_format">[Error] %s</string>
    <!-- permission title for READ_TASKS -->
    <string name="read_permission_label">Tasks Permission</string>

    <!-- permission title for READ_TASKS -->
    <string name="write_permission_label">Tasks Permission</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>
    <string name="app_id">54bb1525</string>
    <string name="button1">开始识别</string>
    <string name="text_begin">请开始说话…</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="text_upload_success">上传成功</string>
    <string name="title_activity_test_music_control">TestMusicControl</string>
    <string name="textgoujian">构建语法</string>
    <string name="pref_key_iat_show">iat_show</string>
    <string name="pref_title_iat_show">显示听写界面</string>
    <string name="iat_off_line_asr_preference">iat_offline</string>
    <string name="off_line_asr_preference">离线读取语音文件</string>
    <string name="say_zai">say_zai</string>
    <string name="say_zai_title">说"在"</string>
    <string name="use_baike">use_baike</string>
    <string name="use_baike_title">使用百科</string>
    <string name="use_faq">use_faq</string>
    <string name="use_faq_title">使用社区问答</string>
    <string name="use_calc">use_calc</string>
    <string name="use_calc_title">使用语音计算</string>
    <string name="use_datetime">use_datetime</string>
    <string name="use_datetime_title">使用语音问时间</string>
    <string name="use_translation">use_translation</string>
    <string name="use_translation_title">使用翻译</string>
    <string name="use_stock">use_stock</string>
    <string name="use_stock_title">使用股票</string>
    <!-- 合成 -->
    <string-array name="engine_entries">
        <item>本地合成</item>
        <item>在线合成</item>
    </string-array>
    <string-array name="engine_values">
        <item>local</item>
        <item>cloud</item>
    </string-array>
    <string-array name="voicer_cloud_entries">
        <item>小燕</item>
        <item>小宇</item>
        <item>凯瑟琳</item>
        <item>亨利</item>
        <item>玛丽</item>
        <item>小研</item>
        <item>小琪</item>
        <item>小峰</item>
        <item>小梅</item>
        <item>小莉</item>
        <item>小蓉</item>
        <item>小芸</item>
        <item>小坤</item>
        <item>小强 </item>
        <item>小莹</item>
        <item>小新</item>
        <item>楠楠</item>
        <item>老孙</item>
    </string-array>
    <string-array name="voicer_cloud_values">
        <item>xiaoyan</item>
        <item>xiaoyu</item>
        <item>catherine</item>
        <item>henry</item>
        <item>vimary</item>
        <item>vixy</item>
        <item>xiaoqi</item>
        <item>vixf</item>
        <item>xiaomei</item>
        <item>xiaolin</item>
        <item>xiaorong</item>
        <item>xiaoqian</item>
        <item>xiaokun</item>
        <item>xiaoqiang</item>
        <item>vixying</item>
        <item>xiaoxin</item>
        <item>nannan</item>
        <item>vils</item>
    </string-array>
    <string-array name="stream_entries">
        <item>通话</item>
        <item>系统</item>
        <item>铃声</item>
        <item>音乐</item>
        <item>闹铃</item>
        <item>通知</item>
    </string-array>
    <string-array name="stream_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="tts_toast_format" formatted="false">缓冲进度为%d%%，播放进度为%d%%</string>
    <!-- 语言 -->
    <string-array name="language_entries">
        <item>普通话</item>
        <item>粤语</item>
        <item>河南话</item>
        <item>英语</item>
    </string-array>
    <string-array name="language_values">
        <item>mandarin</item>
        <item>cantonese</item>
        <item>henanese</item>
        <item>en_us</item>
    </string-array>
    <!-- 语音评测 -->
    <string name="text_en_word">"[word]\napple\nbanana\norange\ncherry\npeach\npear"</string>
    <string name="text_en_sentence">"The quick brown fox jumps over the lazy dog."</string>
    <string name="text_cn_syllable">"知，纸，迟，痴，是，时"</string>
    <string name="text_cn_word">"磁铁，率领，脆弱，动手，古筝"</string>
    <string name="text_cn_sentence">"一座座雪峰插入云霄，峰顶银光闪闪，大大小小的湖泊，像颗颗宝石镶嵌在彩带般的沟谷中。"</string>
    <string-array name="ise_language_entries">
        <item>英语</item>
        <item>汉语</item>
    </string-array>
    <string-array name="ise_language_values">
        <item>en_us</item>
        <item>zh_cn</item>
    </string-array>
    <string-array name="category_entries">
        <item>单字</item>
        <item>词语</item>
        <item>句子</item>
    </string-array>
    <string-array name="category_values">
        <item>read_syllable</item>
        <item>read_word</item>
        <item>read_sentence</item>
    </string-array>
    <string-array name="result_level_entries">
        <item>plain</item>
        <item>complete</item>
    </string-array>
    <!-- 标点符号 -->
    <string-array name="punc_entries">
        <item>有标点</item>
        <item>无标点</item>
    </string-array>
    <string-array name="off_line_asr_entries">
        <item>读取</item>
        <item>不读取</item>
    </string-array>
    <string-array name="punc_values">
        <item>1</item>
        <item>0</item>
    </string-array>
    <string-array name="off_line_asr_values">
        <item>1</item>
        <item>0</item>
    </string-array>
    <string-array name="dwa_entries">
        <item>开启</item>
        <item>关闭</item>
    </string-array>
    <string name="title_activity_only_show">OnlyShowActivity</string>
    <string name="title_activity_floatshow">floatshow</string>
    <string name="title_activity_todoviewq">todoviewq</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_todo">todo</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>
</resources>
